Documentation : Extended to _conversations Fixed : Moved some out of place from _conversations to _misc

--- a/includes/_misc.scss
+++ b/includes/_misc.scss
@@ -236,3 +236,49 @@ a.Small {
 .WarningMessage {
 	@include warningMessage;
 }
+
+/* Container */
+.Border {
+	@include borderRadius(8px);
+	background: #ddd;
+	background: rgba(82, 82, 82, 0.7);
+	padding: 10px;
+}
+
+/* Tabs */
+ul.Tabs {
+	border-bottom: 1px solid #aaa;
+	text-align: left;
+	padding-left: 4px;
+	li {
+		display: inline-block;
+		a {
+			display: inline-block;
+			margin-left: 4px;
+			border: 1px solid #aaa;
+			border-width: 1px 1px 0 1px;
+			@include borderRadius(3px 3px 0 0);
+			background: #eee;
+			color: #888;
+			position: relative;
+			top: 1px;
+			padding: 2px 8px 1px;
+			&:hover {
+				background: #f5f5f5;
+				color: #444;
+			}
+			&.Active {
+				padding: 2px 8px;
+				background: #fff;
+				color: #000;
+			}
+		/* Icons */
+			&.EntryTabFor_password {
+				padding-left: 22px;
+				background-image: url('images/icon.png');
+				background-position: 3px 4px;
+				background-repeat: no-repeat;
+			}
+		}
+	}
+}
