--- a/output/style.css
+++ b/output/style.css
@@ -771,6 +771,49 @@ a.Small img {
   background: #ffebe9;
   border: 1px solid #FFCCC9; }
 
+/* Container */
+.Border {
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  background: #ddd;
+  background: rgba(82, 82, 82, 0.7);
+  padding: 10px; }
+
+/* Tabs */
+ul.Tabs {
+  border-bottom: 1px solid #aaa;
+  text-align: left;
+  padding-left: 4px; }
+  ul.Tabs li {
+    display: inline-block; }
+    ul.Tabs li a {
+      display: inline-block;
+      margin-left: 4px;
+      border: 1px solid #aaa;
+      border-width: 1px 1px 0 1px;
+      -webkit-border-radius: 3px 3px 0 0;
+      -moz-border-radius: 3px 3px 0 0;
+      border-radius: 3px 3px 0 0;
+      background: #eee;
+      color: #888;
+      position: relative;
+      top: 1px;
+      padding: 2px 8px 1px;
+      /* Icons */ }
+      ul.Tabs li a:hover {
+        background: #f5f5f5;
+        color: #444; }
+      ul.Tabs li a.Active {
+        padding: 2px 8px;
+        background: #fff;
+        color: #000; }
+      ul.Tabs li a.EntryTabFor_password {
+        padding-left: 22px;
+        background-image: url("images/icon.png");
+        background-position: 3px 4px;
+        background-repeat: no-repeat; }
+
 /* Done */
 /* =================================================================== Header */
 #Head {
@@ -2485,78 +2528,6 @@ textarea.MultiComplete {
 
 body.Conversations a.Cancel {
   margin-left: 20px; }
-
-/* Upload Progress Bar */
-.UploadProgress {
-  margin: 10px 0;
-  background: url("images/upload-progress-back.gif") repeat;
-  width: 200px;
-  z-index: 0;
-  color: #fff;
-  text-shadow: 0 1px 1px #333;
-  border: 1px solid #0c3c7e;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px; }
-  .UploadProgress div {
-    padding: 2px 0; }
-    .UploadProgress div strong {
-      font-weight: bold; }
-  .UploadProgress .Foreground {
-    position: absolute; }
-  .UploadProgress .Background {
-    position: absolute;
-    width: 0;
-    background: url("images/upload-bg.gif") repeat;
-    z-index: 1; }
-  .UploadProgress .Foreground {
-    text-indent: 6px;
-    overflow: visible;
-    white-space: nowrap;
-    z-index: 2; }
-
-/* Container */
-.Border {
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
-  background: #ddd;
-  background: rgba(82, 82, 82, 0.7);
-  padding: 10px; }
-
-/* Tabs */
-ul.Tabs {
-  border-bottom: 1px solid #aaa;
-  text-align: left;
-  padding-left: 4px; }
-  ul.Tabs li {
-    display: inline-block; }
-    ul.Tabs li a {
-      display: inline-block;
-      margin-left: 4px;
-      border: 1px solid #aaa;
-      border-width: 1px 1px 0 1px;
-      -webkit-border-radius: 3px 3px 0 0;
-      -moz-border-radius: 3px 3px 0 0;
-      border-radius: 3px 3px 0 0;
-      background: #eee;
-      color: #888;
-      position: relative;
-      top: 1px;
-      padding: 2px 8px 1px;
-      /* Icons */ }
-      ul.Tabs li a:hover {
-        background: #f5f5f5;
-        color: #444; }
-      ul.Tabs li a.Active {
-        padding: 2px 8px;
-        background: #fff;
-        color: #000; }
-      ul.Tabs li a.EntryTabFor_password {
-        padding-left: 22px;
-        background-image: url("images/icon.png");
-        background-position: 3px 4px;
-        background-repeat: no-repeat; }
 
 /* Done */
 /* ============================================================ Entry Screens */
